--- a/AnkiDroid/src/main/AndroidManifest.xml
+++ b/AnkiDroid/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
           package="com.ichi2.anki"
           android:installLocation="auto"
           android:versionCode="20800101"
-          android:versionName="2.8alpha1">
+          android:versionName="2.8alpha1glut">
 
     <!--
         The version number is of the form:
